syntax = "proto3";

package auth;

// 인증 서비스 정의
service AuthService {
  // Health Check
  rpc healthCheck(HealthCheckRequest) returns (HealthCheckResponse);

  // 회원가입
  rpc register(GrpcRegisterRequest) returns (GrpcAuthResponse);
  
  // 로그인
  rpc login(GrpcLoginRequest) returns (GrpcAuthResponse);
  
  // 토큰 갱신
  rpc refreshToken(GrpcRefreshTokenRequest) returns (GrpcTokenResponse);
  
  // 로그아웃
  rpc logout(GrpcLogoutRequest) returns (GrpcLogoutResponse);
  
  // 프로필 조회
  rpc getProfile(GrpcProfileRequest) returns (GrpcProfileResponse);

  // 사용자 정보 업데이트
  rpc updateUser(GrpcUpdateUserRequest) returns (GrpcAuthResponse);
}

// Health Check 요청
message HealthCheckRequest {
  // 추가 파라미터가 필요한 경우를 위한 service 필드
  optional string service = 1;
}

// Health Check 응답
message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
  string message = 2;
  map<string, string> details = 3;  // 추가적인 상태 정보 (메모리 사용량, 연결 수 등)
}

// 회원가입 요청
message GrpcRegisterRequest {
  string nickname = 1;
  string email = 2;
  string password = 3;
  repeated string roles = 4;
}

// 로그인 요청
message GrpcLoginRequest {
  string email = 1;
  string password = 2;
}

// 토큰 갱신 요청
message GrpcRefreshTokenRequest {
  string userId = 1;
  string refreshToken = 2;
}

// 로그아웃 요청
message GrpcLogoutRequest {
  string userId = 1;
}

// 프로필 조회 요청
message GrpcProfileRequest {
  string userId = 1;
}

// 사용자 정보 업데이트 요청
message GrpcUpdateUserRequest {
  string userId = 1;
  optional string nickname = 2;
  optional string email = 3;
  optional string password = 4;
  repeated string roles = 5;
  optional string status = 6;
  map<string, string> metadata = 7;
}

// 인증 응답 (로그인/회원가입 공통)
message GrpcAuthResponse {
  string id = 1;
  string nickname = 2;
  string email = 3;
  repeated string roles = 4;
  string accessToken = 5;
  string refreshToken = 6;
}

// 토큰 응답
message GrpcTokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

// 로그아웃 응답
message GrpcLogoutResponse {
  bool success = 1;
}

// 프로필 응답
message GrpcProfileResponse {
  string id = 1;
  string nickname = 2;
  string email = 3;
  repeated string roles = 4;
  string status = 5;
  string lastLoginAt = 6;
  map<string, string> metadata = 7;
  string createdAt = 8;
  string updatedAt = 9;
} 